# FEM_IPC

./: .gitmodules  CMakeLists.txt  README.md
include/Crack/: extractCrack.h  mpmSimulator.h
include/Energy/: BarrierEnergy.h  ElasticEnergy.h  ExternalEnergy.h  InertiaEnergy.h
include/FEM_IPC/: BarrierEnergy.h  CCD.h  ElasticEnergy.h  ExternalEnergy.h  GravityEnergy.h  InertiaEnergy.h  distance.h  materials.h  mesh.h  simulator.h  tools.h  utils.h
include/FormatMesh/: objMesh.h
include/IPC/: AABB.h  CCD.h  distance.h
include/MLS/: MLS.h
include/Objects/: mesh.h
include/Simulator/: simulator.h
include/Utils/: tools.h  utils.h
input/: C5.msh  Left_bottom_fix.msh  Left_top_fix.msh  Middle_support.msh  Right_top_move.msh  bunny_highRes_mesh.mesh  bunny_highRes_mesh.msh  bunny_lowRes_mesh.msh  impactor.msh  left_support.msh  tet.msh  tet_origin.msh
src/: BarrierEnergy.cpp  CCD.cpp  ElasticEnergy.cpp  ExternalEnergy.cpp  GravityEnergy.cpp  InertiaEnergy.cpp  NOTE  distance.cpp  main.cpp  mesh.cpp  objMesh.cpp  simulator.cpp  simulator_ABD.cpp  tools.cpp  utils.cpp
src/Crack/: extractCrack.cpp  mpmSimulator.cpp
src/Energy/: BarrierEnergy.cpp  ElasticEnergy.cpp  ExternalEnergy.cpp  InertiaEnergy.cpp
src/FormatMesh/: objMesh.cpp
src/IPC/: AABB.cpp  CCD.cpp
src/MLS/: MLS.cpp
src/Objects/: mesh.cpp
src/Simulator/: simulator.cpp  simulator_ABD.cpp  simulator_ABD_triMesh.cpp
src/Utils/: tools.cpp  utils.cpp
